# skill-scraper

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  scrape_skills.py
scripts/: build_catalog.py
skills/: MANIFEST.md
skills/distill/: SKILL.md
skills/pbakaus__impeccable__clarify/: SKILL.md
skills/pbakaus__impeccable__critique/: SKILL.md
skills/soultrace/: SKILL.md
src/skill_cli/: __init__.py  __main__.py  banner.py  catalog.py  cli.py  github_install.py  models.py  project_context.py  recommender.py  style.py
src/skill_cli/data/: skills_catalog.json
src/skill_cli/skill-finder/: SKILL.md
tests/: test_catalog.py  test_manifest.py  test_recommender.py
