[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-cli"
version = "0.1.0"
description = "Interactive CLI for discovering and installing agent skills from skills.sh."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "openai>=1.107.0",
]

[project.scripts]
skill-cli = "skill_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skill_cli = ["skill-finder/SKILL.md"]
